--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-     - assets/images/fika_logo.png
+     - assets/
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
