--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "fika_app" "\0"
+            VALUE "FileDescription", "flutter_homeservice" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "fika_app" "\0"
+            VALUE "InternalName", "flutter_homeservice" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "fika_app.exe" "\0"
-            VALUE "ProductName", "fika_app" "\0"
+            VALUE "OriginalFilename", "flutter_homeservice.exe" "\0"
+            VALUE "ProductName", "flutter_homeservice" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
