--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.tarsoft.homeservice">
+    package="co.fika.errands">
    <application
         android:label="Fika Errands"
         android:name="${applicationName}"
