--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   table_calendar: ^3.0.5
   flutter_launcher_icons: ^0.9.2
   transparent_image: ^2.0.0
+  firebase_core: ^1.4.0
+  firebase_auth: ^3.0.1
+  google_sign_in: ^5.0.7
 
 dev_dependencies:
   flutter_test:
