--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^1.4.0
   firebase_auth: ^3.0.1
   google_sign_in: ^5.0.7
+  cloud_firestore: ^3.1.14
+
 
 dev_dependencies:
   flutter_test:
